Fixed: Loading can switch icon not centered

--- a/css/index.css
+++ b/css/index.css
@@ -98,8 +98,8 @@ a {
 }
 
 #loading-can {
-    width: 185px;
-    height: 191px;
+    width: 173px;
+    height: 173px;
     background: url('../images/0_loading/can.png');
     background-repeat: no-repeat;
     margin: 0 auto;
